--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,27 @@
 body {
 	text-align: center;
+	background-image: url('../img/bg.jpg');
+}
+
+#header {
+	background-color: rgba(0, 0, 0, .6);
+}
+
+#header h1 {
+	color: white;
+	margin: 0;
+	padding: 10px;
 }
 
 #main {
-	background-color: rgba(0, 0, 0, 0.5);
+	background-color: rgba(0, 0, 0, 0.6);
 	border-radius: 25px;
 	margin: 5%;
 	padding: 20px;
+}
+
+input {
+	width: auto;
 }
 
 @media(max-width: 500px){
